freesia/manifests/temporis/thanos-query/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-query-grpc
  labels:
    app.kubernetes.io/name: thanos-query
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 10901
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: query
