freesia/manifests/temporis/thanos-query/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-query-http
  labels:
    app.kubernetes.io/name: thanos-query
spec:
  type: ClusterIP
  ports:
  - port: 10902
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: query
