freesia/manifests/temporis/thanos-query/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-query-http

spec:
  routes:
    - kind: Rule
      match: Host(`thanos-query.harvestasya.org`)
      services:
        - name: thanos-query-http
          port: 10902
